force-app/main/default/objects/Delivery_Ticket_Timer__c/Delivery_Ticket_Timer__c.object-meta.xml
<CustomObject>
    <label>Delivery Ticket Timer</label>
    <nameField>
        <displayFormat>DTT-{00000000}</displayFormat>
        <label>Delivery Ticket Timer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Ticket Timers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>