force-app/main/default/objects/Delivery_Ticket_Timer__c/fields/Changed_Delivery_Phase__c.field-meta.xml
<CustomField>
    <fullName>Changed_Delivery_Phase__c</fullName>
    <label>Changed Delivery Phase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>