force-app/main/default/objects/Delivery_Ticket_Timer__c/fields/Elapsed_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time_Days__c</fullName>
    <label>Elapsed Time (Days)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>