force-app/main/default/objects/Delivery_Ticket_Timer__c/fields/Prior_Delivery_Phase__c.field-meta.xml
<CustomField>
    <fullName>Prior_Delivery_Phase__c</fullName>
    <label>Prior Delivery Phase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>