force-app/main/default/objects/Delivery_Ticket_Timer__c/fields/RelatedDeliveryTicket__c.field-meta.xml
<CustomField>
    <fullName>RelatedDeliveryTicket__c</fullName>
    <label>RelatedDeliveryTicket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Delivery Ticket Timers</relationshipLabel>
    <relationshipName>Delivery_Ticket_Timers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>